[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2021'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'frontier-template-node'
publish = false
repository = 'https://github.com/substrate-developer-hub/frontier-node-template/'
version = '0.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
branch = 'master'
git = 'https://github.com/paritytech/substrate'
version = '3.0.0'

[features]
aura = ['frontier-template-runtime/aura']
default = ['aura']
manual-seal = ['frontier-template-runtime/manual-seal']
rpc_binary_search_estimate = ['fc-rpc/rpc_binary_search_estimate']
runtime-benchmarks = ['frontier-template-runtime/runtime-benchmarks']

[dependencies]
async-trait = '0.1'
futures = '0.3'
jsonrpc-core = '18.0.0'
jsonrpc-pubsub = '18.0.0'
log = '0.4.8'

[dependencies.clap]
features = ['derive']
version = '3.1'

[dependencies.codec]
features = ['derive']
package = 'parity-scale-codec'
version = '3.1'

[dependencies.fc-consensus]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fc-db]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fc-mapping-sync]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fc-rpc]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fc-rpc-core]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fp-consensus]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fp-dynamic-fee]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fp-evm]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fp-rpc]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fp-storage]
git = 'https://github.com/paritytech/frontier.git'

[dependencies.frame-benchmarking]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.frame-benchmarking-cli]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.frame-system]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.frontier-template-runtime]
default-features = false
features = ['std']
path = '../runtime'

[dependencies.pallet-transaction-payment]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-transaction-payment-rpc]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-basic-authorship]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-cli]
branch = 'master'
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-client-api]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-consensus]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-consensus-aura]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-consensus-manual-seal]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-executor]
branch = 'master'
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-finality-grandpa]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-keystore]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-network]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-rpc]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-rpc-api]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-service]
branch = 'master'
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-telemetry]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-transaction-pool]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sc-transaction-pool-api]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-api]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-block-builder]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-blockchain]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-consensus]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-consensus-aura]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-core]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-finality-grandpa]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-inherents]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-keyring]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-runtime]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-timestamp]
branch = 'master'
git = 'https://github.com/paritytech/substrate'

[dependencies.substrate-frame-rpc-system]
branch = 'master'
git = 'https://github.com/paritytech/substrate'
