[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.fp-rpc]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '4ac04b135fe165ae48a285c244666e3020296cb6'

[dependencies.frame-benchmarking]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate'
optional = true

[dependencies.frame-executive]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.frame-support]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.frame-system]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
version = '3.0.0-dev'

[dependencies.frame-system-benchmarking]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate'
optional = true

[dependencies.frame-system-rpc-runtime-api]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.pallet-aura]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.pallet-balances]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.pallet-dynamic-fee]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '4ac04b135fe165ae48a285c244666e3020296cb6'

[dependencies.pallet-ethereum]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '4ac04b135fe165ae48a285c244666e3020296cb6'

[dependencies.pallet-evm]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '4ac04b135fe165ae48a285c244666e3020296cb6'

[dependencies.pallet-evm-precompile-modexp]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '4ac04b135fe165ae48a285c244666e3020296cb6'

[dependencies.pallet-evm-precompile-sha3fips]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '4ac04b135fe165ae48a285c244666e3020296cb6'

[dependencies.pallet-evm-precompile-simple]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '4ac04b135fe165ae48a285c244666e3020296cb6'

[dependencies.pallet-grandpa]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.pallet-randomness-collective-flip]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.pallet-sudo]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.pallet-timestamp]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.pallet-transaction-payment]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.sp-block-builder]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-consensus-aura]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '0.9.0-dev'

[dependencies.sp-core]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.sp-inherents]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-io]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.sp-offchain]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.sp-runtime]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.sp-session]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.sp-std]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.sp-transaction-pool]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[dependencies.sp-version]
branch = 'frontier'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '3.0.0-dev'

[features]
aura = []
default = [
    'std',
    'aura',
]
manual-seal = []
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-evm/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'fp-rpc/std',
    'pallet-ethereum/std',
    'pallet-evm/std',
    'pallet-dynamic-fee/std',
    'pallet-evm-precompile-simple/std',
    'pallet-evm-precompile-sha3fips/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'frame-benchmarking/std',
    'frame-system-benchmarking/std',
]
[build-dependencies.substrate-wasm-builder]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'frontier-template-runtime'
publish = false
repository = 'https://github.com/paritytech/frontier/'
version = '0.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
