[package]
authors = ['Parity Technologies <admin@parity.io>']
description = 'Ethereum RPC (web3) compatibility layer for Substrate.'
edition = '2018'
license = 'GPL-3.0'
name = 'frontier-template-test-client'
publish = false
version = '0.0.0'
[dependencies.codec]
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frontier-template-runtime]
path = '../../runtime'

[dependencies.sc-client-api]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-consensus]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sc-executor]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-api]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[dependencies.sp-runtime]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'

[dependencies.substrate-test-client]
branch = 'frontier'
git = 'https://github.com/paritytech/substrate.git'
